# dependency_graph

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/core/: __init__.py  dependency.py  dependency_graph_builder.py  import_visitor.py  project_analyzer.py  project_detector.py  project_structure.py  python_module.py
src/include/: dependency.py  project_analyzer.py
