[project]
name = "dependency-graph"
version = "0.1.0"
description = "None"
authors = [{name = "Alexander Kleimenov"}]
maintainers = [
    {name = "Alexander Kleimenov", email="nequamy@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

package-mode = false

[project.scripts]
deps_graph = "src.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
