[project]
name = "dependency-graph"
version = "0.1.0"
description = "None"
authors = [{name = "Alexander Kleimenov"}]
maintainers = [
    {name = "Alexander Kleimenov", email="nequamy@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphviz (>=0.20.3,<0.21.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
packages = [
    {include = "src"}
]

[project.scripts]
deps_graph = "src.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
